import { describe, expect, it } from 'vitest';
import { generateDTS } from '../../src/codegen/generateDts';

// Minimal stubs used across tests
const NAMED_MAP = `export interface RouteNamedMap {
  '/': RouteRecordInfo<'/', '/', Record<never, never>, Record<never, never>, never>,
}`;

const TREE_MAP = `export interface RouteTreeMap extends RouteNamedMap {}`;

const FILE_INFO_MAP = `export interface _RouteFileInfoMap {
  'src/pages/index.tsx': {
    routes:
      | '/'
    views:
      | never
  }
}`;

describe('generateDTS', () => {
  it('produces the expected module declarations', () => {
    const output = generateDTS({
      routeNamedMap: NAMED_MAP,
      routeTreeMap: TREE_MAP,
      routeFileInfoMap: FILE_INFO_MAP,
      paramsTypesDeclaration: '',
      customParamsType: 'never',
    });

    expect(output).toContain("declare module 'essor-router/auto-routes'");
    expect(output).toContain("declare module 'essor-router/auto-resolver'");
    expect(output).toContain('export declare const routes: RouteRecordRaw[]');
    expect(output).toContain('export const resolver: any');
  });

  it('includes the file header suppressors', () => {
    const output = generateDTS({
      routeNamedMap: NAMED_MAP,
      routeTreeMap: TREE_MAP,
      routeFileInfoMap: FILE_INFO_MAP,
      paramsTypesDeclaration: '',
      customParamsType: 'never',
    });

    expect(output).toContain('/* eslint-disable */');
    expect(output).toContain('// @ts-nocheck');
    expect(output).toContain('// Generated by essor-router. !! DO NOT MODIFY THIS FILE !!');
  });

  it('omits the custom params section when paramsTypesDeclaration is empty', () => {
    const output = generateDTS({
      routeNamedMap: NAMED_MAP,
      routeTreeMap: TREE_MAP,
      routeFileInfoMap: FILE_INFO_MAP,
      paramsTypesDeclaration: '',
      customParamsType: 'never',
    });

    expect(output).not.toContain('// Custom route params parsers');
  });

  it('includes the custom params section when paramsTypesDeclaration is provided', () => {
    const declaration = `type Param_uuid = ReturnType<NonNullable<typeof import('./parsers/uuid').parser['get']>>`;
    const output = generateDTS({
      routeNamedMap: NAMED_MAP,
      routeTreeMap: TREE_MAP,
      routeFileInfoMap: FILE_INFO_MAP,
      paramsTypesDeclaration: declaration,
      customParamsType: "'uuid'",
    });

    expect(output).toContain('// Custom route params parsers');
    expect(output).toContain(declaration);
  });

  it('embeds customParamsType in TypesConfig', () => {
    const output = generateDTS({
      routeNamedMap: NAMED_MAP,
      routeTreeMap: TREE_MAP,
      routeFileInfoMap: FILE_INFO_MAP,
      paramsTypesDeclaration: '',
      customParamsType: "'uuid' | 'int'",
    });

    expect(output).toContain("ParamParsers: 'uuid' | 'int'");
  });

  it('indents routeNamedMap lines by two spaces', () => {
    const output = generateDTS({
      routeNamedMap: NAMED_MAP,
      routeTreeMap: TREE_MAP,
      routeFileInfoMap: FILE_INFO_MAP,
      paramsTypesDeclaration: '',
      customParamsType: 'never',
    });

    // Every non-empty line from NAMED_MAP should appear indented
    for (const line of NAMED_MAP.split('\n').filter((l) => l.length > 0)) {
      expect(output).toContain(`  ${line}`);
    }
  });

  it('indents routeTreeMap lines by two spaces', () => {
    const output = generateDTS({
      routeNamedMap: NAMED_MAP,
      routeTreeMap: TREE_MAP,
      routeFileInfoMap: FILE_INFO_MAP,
      paramsTypesDeclaration: '',
      customParamsType: 'never',
    });

    for (const line of TREE_MAP.split('\n').filter((l) => l.length > 0)) {
      expect(output).toContain(`  ${line}`);
    }
  });

  it('indents routeFileInfoMap lines by two spaces', () => {
    const output = generateDTS({
      routeNamedMap: NAMED_MAP,
      routeTreeMap: TREE_MAP,
      routeFileInfoMap: FILE_INFO_MAP,
      paramsTypesDeclaration: '',
      customParamsType: 'never',
    });

    for (const line of FILE_INFO_MAP.split('\n').filter((l) => l.length > 0)) {
      expect(output).toContain(`  ${line}`);
    }
  });

  it('includes RouteTreeNames type alias', () => {
    const output = generateDTS({
      routeNamedMap: NAMED_MAP,
      routeTreeMap: TREE_MAP,
      routeFileInfoMap: FILE_INFO_MAP,
      paramsTypesDeclaration: '',
      customParamsType: 'never',
    });

    expect(output).toContain('export type RouteTreeNames = keyof RouteTreeMap');
  });

  it('includes _RouteNamesForFilePath utility type', () => {
    const output = generateDTS({
      routeNamedMap: NAMED_MAP,
      routeTreeMap: TREE_MAP,
      routeFileInfoMap: FILE_INFO_MAP,
      paramsTypesDeclaration: '',
      customParamsType: 'never',
    });

    expect(output).toContain('export type _RouteNamesForFilePath<FilePath extends string>');
    expect(output).toContain('keyof RouteNamedMap');
  });

  it('imports the expected types from essor-router', () => {
    const output = generateDTS({
      routeNamedMap: NAMED_MAP,
      routeTreeMap: TREE_MAP,
      routeFileInfoMap: FILE_INFO_MAP,
      paramsTypesDeclaration: '',
      customParamsType: 'never',
    });

    expect(output).toContain("from 'essor-router'");
    expect(output).toContain('RouteRecordInfo');
    expect(output).toContain('ParamValue');
    expect(output).toContain('RouteRecordRaw');
  });

  it('imports the expected types from essor-router/experimental', () => {
    const output = generateDTS({
      routeNamedMap: NAMED_MAP,
      routeTreeMap: TREE_MAP,
      routeFileInfoMap: FILE_INFO_MAP,
      paramsTypesDeclaration: '',
      customParamsType: 'never',
    });

    expect(output).toContain("from 'essor-router/experimental'");
    expect(output).toContain('RouteTreeNodeInfo');
  });

  it('matches snapshot for a minimal configuration', () => {
    const output = generateDTS({
      routeNamedMap: NAMED_MAP,
      routeTreeMap: TREE_MAP,
      routeFileInfoMap: FILE_INFO_MAP,
      paramsTypesDeclaration: '',
      customParamsType: 'never',
    });

    expect(output).toMatchSnapshot();
  });

  it('matches snapshot when custom param parsers are present', () => {
    const declaration = `type Param_uuid = ReturnType<NonNullable<typeof import('./parsers/uuid').parser['get']>>`;
    const output = generateDTS({
      routeNamedMap: NAMED_MAP,
      routeTreeMap: TREE_MAP,
      routeFileInfoMap: FILE_INFO_MAP,
      paramsTypesDeclaration: declaration,
      customParamsType: "'uuid'",
    });

    expect(output).toMatchSnapshot();
  });
});
