// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`generateDTS > matches snapshot for a minimal configuration 1`] = `
"/* eslint-disable */
/* prettier-ignore */
// oxfmt-ignore
// @ts-nocheck
// noinspection ES6UnusedImports
// Generated by essor-router. !! DO NOT MODIFY THIS FILE !!
// It's recommended to commit this file.
// Make sure to add this file to your tsconfig.json file as an "includes" or "files" entry.



      import type {
    RouteRecordInfo,
    ParamValue,
    ParamValueOneOrMore,
    ParamValueZeroOrMore,
    ParamValueZeroOrOne,
    RouteRecordRaw,
  } from 'essor-router'
declare module 'essor-router' {
 
  export interface RouteNamedMap {
    '/': RouteRecordInfo<'/', '/', Record<never, never>, Record<never, never>, never>,
  }
}

declare module 'essor-router/auto-routes' {

  import type {
    InferRouteBeforeLoadData,
    InferRouteDefinitionFromDefinePageModule,
    InferRouteLoaderData,
    InferRouteSearch,
    InferRouteStartOptions,
    RouteTreeNodeInfo,
  } from 'essor-router/experimental'

  interface TypesConfig {
    ParamParsers: never
  }

  /**
   * Route name map generated by essor-router
   */
  export interface RouteNamedMap {
    '/': RouteRecordInfo<'/', '/', Record<never, never>, Record<never, never>, never>,
  }

  /**
   * Route tree map generated by essor-router.
   * Includes search/loader/start type inference from defineRoute()/definePage().
   */
  export interface RouteTreeMap extends RouteNamedMap {}

  export type RouteTreeNames = keyof RouteTreeMap

  /**
   * Route file to route info map by essor-router.
   * Used by the \\\`typed-router\\\` Volar plugin to automatically type \\\`useRoute()\\\`.
   *
   * Each key is a file path relative to the project root with 2 properties:
   * - routes: union of route names of the possible routes when in this page (passed to useRoute<...>())
   * - views: names of nested views (can be passed to <RouterView name="...">)
   *
   * @internal
   */
  export interface _RouteFileInfoMap {
    'src/pages/index.tsx': {
      routes:
        | '/'
      views:
        | never
    }
  }

  /**
   * Get a union of possible route names in a certain route component file.
   * Used by the \\\`typed-router\\\` Volar plugin to automatically type \\\`useRoute()\\\`.
   *
   * @internal
   */
  export type _RouteNamesForFilePath<FilePath extends string> =
    _RouteFileInfoMap extends Record<FilePath, infer Info>
      ? Info['routes']
      : keyof RouteNamedMap

  export declare const routes: RouteRecordRaw[]
}

declare module 'essor-router/auto-resolver' {
  export const resolver: any
}
"
`;

exports[`generateDTS > matches snapshot when custom param parsers are present 1`] = `
"/* eslint-disable */
/* prettier-ignore */
// oxfmt-ignore
// @ts-nocheck
// noinspection ES6UnusedImports
// Generated by essor-router. !! DO NOT MODIFY THIS FILE !!
// It's recommended to commit this file.
// Make sure to add this file to your tsconfig.json file as an "includes" or "files" entry.

// Custom route params parsers
type Param_uuid = ReturnType<NonNullable<typeof import('./parsers/uuid').parser['get']>>



      import type {
    RouteRecordInfo,
    ParamValue,
    ParamValueOneOrMore,
    ParamValueZeroOrMore,
    ParamValueZeroOrOne,
    RouteRecordRaw,
  } from 'essor-router'
declare module 'essor-router' {
 
  export interface RouteNamedMap {
    '/': RouteRecordInfo<'/', '/', Record<never, never>, Record<never, never>, never>,
  }
}

declare module 'essor-router/auto-routes' {

  import type {
    InferRouteBeforeLoadData,
    InferRouteDefinitionFromDefinePageModule,
    InferRouteLoaderData,
    InferRouteSearch,
    InferRouteStartOptions,
    RouteTreeNodeInfo,
  } from 'essor-router/experimental'

  interface TypesConfig {
    ParamParsers: 'uuid'
  }

  /**
   * Route name map generated by essor-router
   */
  export interface RouteNamedMap {
    '/': RouteRecordInfo<'/', '/', Record<never, never>, Record<never, never>, never>,
  }

  /**
   * Route tree map generated by essor-router.
   * Includes search/loader/start type inference from defineRoute()/definePage().
   */
  export interface RouteTreeMap extends RouteNamedMap {}

  export type RouteTreeNames = keyof RouteTreeMap

  /**
   * Route file to route info map by essor-router.
   * Used by the \\\`typed-router\\\` Volar plugin to automatically type \\\`useRoute()\\\`.
   *
   * Each key is a file path relative to the project root with 2 properties:
   * - routes: union of route names of the possible routes when in this page (passed to useRoute<...>())
   * - views: names of nested views (can be passed to <RouterView name="...">)
   *
   * @internal
   */
  export interface _RouteFileInfoMap {
    'src/pages/index.tsx': {
      routes:
        | '/'
      views:
        | never
    }
  }

  /**
   * Get a union of possible route names in a certain route component file.
   * Used by the \\\`typed-router\\\` Volar plugin to automatically type \\\`useRoute()\\\`.
   *
   * @internal
   */
  export type _RouteNamesForFilePath<FilePath extends string> =
    _RouteFileInfoMap extends Record<FilePath, infer Info>
      ? Info['routes']
      : keyof RouteNamedMap

  export declare const routes: RouteRecordRaw[]
}

declare module 'essor-router/auto-resolver' {
  export const resolver: any
}
"
`;
